<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello Road Kill!</string>
    <string name="confirm">Confirm Selection</string>
    <string name="app_name">Road Kill</string>
    <string name="user">user</string>
    <string name="map">map</string>
    <string name="location">Location</string>
    <string name="datetime">Date and Time</string>
    <string name="settings">Settings</string>
    <string name="species">Species</string>
    <string name="save">Save Record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="upload">Upload</string>
    <string name="list">List Data</string>
    <string name="confidence">Confidence</string>
    <string name="no_data">No Records in the Database</string>
    <string name="select">Select</string>
    <string name="pin">Pin marker on map</string>
    <string name="DigitalClock">DigitalClock01</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
</resources>