<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/speciesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/species"
        android:imeOptions="actionDone"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColorHint="#8C8C8C" >
    </AutoCompleteTextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_weight=".5"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_camera" >
        </ImageButton>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/date" >
            </Button>

            <Button
                android:id="@+id/timeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/time" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/location" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confidence" >
            </TextView>

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:numStars="3"
                android:stepSize="1" >
            </RatingBar>
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_help" >
        </ImageButton>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/save" >
    </Button>

</LinearLayout>